-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u291, jfx17
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8262804 | jfx11.0.11 | Arun Joseph | P3 | Resolved | Fixed | |
| JDK-8262468 | 8u301 | Arun Joseph | P3 | Resolved | Fixed | b01 |
| JDK-8262515 | 8u291 | Arun Joseph | P3 | Resolved | Fixed | b07 |
CSSFilterTest.testCSSFilterRendering system test fails
test.javafx.scene.web.CSSFilterTest > testCSSFilterRendering FAILED
java.lang.AssertionError: Color should not be opaque white: not expected:rgba(255,255,255,255) but was:rgba(255,255,255,255)
at org.junit.Assert.fail(Assert.java:91)
at test.javafx.scene.web.CSSFilterTest.assertColorNotEquals(CSSFilterTest.java:89)
at test.javafx.scene.web.CSSFilterTest.lambda$testCSSFilterRendering$5(CSSFilterTest.java:174)
test.javafx.scene.web.CSSFilterTest > testCSSFilterRendering FAILED
java.lang.AssertionError: Color should not be opaque white: not expected:rgba(255,255,255,255) but was:rgba(255,255,255,255)
at org.junit.Assert.fail(Assert.java:91)
at test.javafx.scene.web.CSSFilterTest.assertColorNotEquals(CSSFilterTest.java:89)
at test.javafx.scene.web.CSSFilterTest.lambda$testCSSFilterRendering$5(CSSFilterTest.java:174)
- backported by
-
JDK-8262468 CSSFilterTest.testCSSFilterRendering system test fails
-
- Resolved
-
-
JDK-8262515 CSSFilterTest.testCSSFilterRendering system test fails
-
- Resolved
-
-
JDK-8262804 CSSFilterTest.testCSSFilterRendering system test fails
-
- Resolved
-
- relates to
-
JDK-8283686 Printing WebView may results in empty page
-
- Open
-
(1 links to)