8260165: CSSFilterTest.testCSSFilterRendering system test fails