tests/system/src/test/java/test/javafx/scene/web/CSSFilterTest.java
@@ -37,7 +37,6 @@ import javafx.stage.Stage;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
-import org.junit.Ignore;
 import org.junit.Test;
 import test.util.Util;
 
@@ -122,7 +121,6 @@ public class CSSFilterTest {
         });
     }
 
-    @Ignore("JDK-8260165")
     @Test public void testCSSFilterRendering() {
         final CountDownLatch webViewStateLatch = new CountDownLatch(1);
 
